--- a/playground/templates/playground/hello.html
+++ b/playground/templates/playground/hello.html
@@ -1,3 +1,6 @@
 <!DOCTYPE html>
-
-<h1>Hello World {{ name }} </h1>
+{% if name %}
+    <h1>Hello World {{ name }}</h1>
+{% else %}
+    <h1>Hello World</h1>
+{% endif %}
