work on django debuger

--- a/playground/templates/playground/hello.html
+++ b/playground/templates/playground/hello.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
-{% if name %}
-    <h1>Hello World {{ name }}</h1>
-{% else %}
-    <h1>Hello World</h1>
-{% endif %}
+
+
+<html>
+<body>
+      {% if name %}
+            <h1>Hello World {{ name }}</h1>
+        {% else %}
+            <h1>Hello World</h1>
+        {% endif %}     
+</body>
+</html>
+
